HTML updates and Started CSS

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -16,57 +17,61 @@
 
 <body>
 
-    <nav>
-      Services
-      Product
-      Vision
-      Features
-      About
-      Contact
+  <nav>
+    <a href="#">Services</a>
+    <a href="#">Product</a>
+    <a href="#">Vision</a>
+    <a href="#">Features</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
 
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-    </nav>
-    <header
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </nav>
+  <header>
+    <h1>
       Innovation
       On
       Demand
-
+    </h1>
+    <section class="headerbutton">
       Get Started
-
-      <img src="img/header-img.png" alt="Image of a code snippet.">
-    </header>
-    <section class="top">
-      Features
-      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-
-      About
-      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
     </section>
+    <img class="headerimage" src="img/header-img.png" alt="Image of a code snippet.">
+  </header>
+  <section class="top">
+    <h2>Features</h2>
 
-    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-    <section class="bottom">
-      Services
-      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    <p> elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse euornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 
 
-      Product
-      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    <h2>About</h2>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
 
-      Vision
-      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-    </section>
-    <section class="contact">
-      Contact
-      123 Way 456 Street
-      Somewhere, USA
-      1 (888) 888-8888
-      sales@greatidea.io
-    </section>  
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  <section class="bottom">
+    <h2>Services</h2>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+
+
+    <h2>Product</h2>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+
+    <h2>Vision</h2>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+  <section class="contact">
+    Contact
+    <address>123 Way 456 Street
+      Somewhere, USA</address>
+    <a href=tel:1888888888>1 (888) 888-8888</a>
+    <a href=mailto:sales@greatidea.io>sales@greatidea.io</a>
+  </section>
   <footer>
-      Copyright Great Idea! 2018
+    Copyright Great Idea! 2018
   </footer>
-  
-  
+
+
 </body>
+
 </html>
