--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -28,44 +28,52 @@
     <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
   </nav>
   <header>
-    <h1>
+    <section class="headerleft">
+    <h1 >
       Innovation
       On
       Demand
     </h1>
     <section class="headerbutton">
-      Get Started
+      <a href=#"">Get Started</a>
     </section>
-    <img class="headerimage" src="img/header-img.png" alt="Image of a code snippet.">
+  </section>
+    <section class="headerright">
+    <img  src="img/header-img.png" alt="Image of a code snippet.">
+  </section>
   </header>
+  <hr class="tophr">
   <section class="top">
-    <h2>Features</h2>
+    <section class="lefttop">
+    <h3 class="lefttop">Features</h3>
 
-    <p> elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse euornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-
-
-    <h2>About</h2>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    <p class="lefttop"> elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse euornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+  <section class="righttop">
+    <h3 class="rightop">About</h3>
+    <p class="righttop">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
   </section>
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   <section class="bottom">
-    <h2>Services</h2>
+    <h3>Services</h3>
     <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 
 
-    <h2>Product</h2>
+    <h3>Product</h3>
     <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 
-    <h2>Vision</h2>
+    <h3>Vision</h3>
     <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </section>
+  <hr class="bottomhr">
   <section class="contact">
-    Contact
+    <h3>Contact</h3>
     <address>123 Way 456 Street
       Somewhere, USA</address>
-    <a href=tel:1888888888>1 (888) 888-8888</a>
-    <a href=mailto:sales@greatidea.io>sales@greatidea.io</a>
+    <a class="tel" href="tel:1888888888">1 (888) 888-8888</a>
+    <a class="email" href="mailto:sales@greatidea.io">sales@greatidea.io</a>
   </section>
   <footer>
     Copyright Great Idea! 2018
