better work on HTML and CSS.

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,69 +16,85 @@
 </head>
 
 <body>
+  <div class="container">
 
-  
-  <nav>
-    <a href="#">Services</a>
-    <a href="#">Product</a>
-    <a href="#">Vision</a>
-    <a href="#">Features</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
+    <nav>
+      <section class="navlinks">
+        <a href="#">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </section>
+      <section class="navimg">
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </section>
+    </nav>
 
-    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  </nav>
-  <header>
-    <section class="headerleft">
-    <h1 >
-      Innovation
-      On
-      Demand
-    </h1>
-    <section class="headerbutton">
-      <a href=#"">Get Started</a>
+
+    <header>
+      <section class="headerleft">
+        <h1>
+          Innovation <br>
+          On<br>
+          Demand<br>
+        </h1>
+        <section class="headerbutton">
+          <a href="#">Get Started</a>
+        </section>
+      </section>
+      <section class="headerright">
+        <img src="img/header-img.png" alt="Image of a code snippet.">
+      </section>
+    </header>
+    <hr class="tophr">
+    <section class="top">
+      <section class="lefttop">
+        <h3>Features</h3>
+
+        <p> elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm
+          nisi. Suspendisse euornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+      <section class="righttop">
+        <h3>About</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
+          interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </section>
     </section>
-  </section>
-    <section class="headerright">
-    <img  src="img/header-img.png" alt="Image of a code snippet.">
-  </section>
-  </header>
-  <hr class="tophr">
-  <section class="top">
-    <section class="lefttop">
-    <h3 class="lefttop">Features</h3>
 
-    <p class="lefttop"> elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse euornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </section>
-  <section class="righttop">
-    <h3 class="rightop">About</h3>
-    <p class="righttop">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </section>
-  </section>
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    <section class="bottom">
+      <section class="bottomleft">
+        <h3>Services</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm
+          nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
 
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  <section class="bottom">
-    <h3>Services</h3>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-
-
-    <h3>Product</h3>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-
-    <h3>Vision</h3>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </section>
-  <hr class="bottomhr">
-  <section class="contact">
-    <h3>Contact</h3>
-    <address>123 Way 456 Street
-      Somewhere, USA</address>
-    <a class="tel" href="tel:1888888888">1 (888) 888-8888</a>
-    <a class="email" href="mailto:sales@greatidea.io">sales@greatidea.io</a>
-  </section>
-  <footer>
-    Copyright Great Idea! 2018
-  </footer>
+      <section class="bottommid">
+        <h3>Product</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm
+          nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+      <section class="bottomright">
+        <h3>Vision</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm
+          nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+    </section>
+    <hr class="bottomhr">
+    <section class="contact">
+      <h3>Contact</h3>
+      <address>123 Way 456 Street<br>
+        Somewhere, USA</address><br>
+      <a class="tel" href="tel:1888888888">1 (888) 888-8888</a><br>
+      <a class="email" href="mailto:sales@greatidea.io">sales@greatidea.io</a>
+    </section>
+    <footer>
+      Copyright Great Idea! 2018
+    </footer>
+  </div>
 
 
 
