Completed the standard html and css

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -17,32 +17,32 @@
 
 <body>
   <div class="container">
-
-    <nav>
-      <section class="navlinks">
-        <a href="#">Services</a>
-        <a href="#">Product</a>
-        <a href="#">Vision</a>
-        <a href="#">Features</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-      </section>
-      <section class="navimg">
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-      </section>
-    </nav>
-
-
     <header>
+      <section class="top-container">
+        <nav class="navlinks">
+          <a href="#">Services</a>
+          <a href="#">Product</a>
+          <a href="#">Vision</a>
+          <a href="#">Features</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </nav>
+        <div class="navimg">
+          <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+        </div>
+      </section>
+
+
+
       <section class="headerleft">
         <h1>
           Innovation <br>
           On<br>
-          Demand<br>
+          Demand
         </h1>
-        <section class="headerbutton">
-          <a href="#">Get Started</a>
-        </section>
+
+        <a href="#">Get Started</a>
+
       </section>
       <section class="headerright">
         <img src="img/header-img.png" alt="Image of a code snippet.">
