Finished tweaks to project, added services.html

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -53,13 +53,11 @@
       <section class="lefttop">
         <h3>Features</h3>
 
-        <p> elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm
-          nisi. Suspendisse euornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p> elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutmnisi. Suspendisse euornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </section>
       <section class="righttop">
         <h3>About</h3>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
-          interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
         </p>
       </section>
     </section>
@@ -68,19 +66,16 @@
     <section class="bottom">
       <section class="bottomleft">
         <h3>Services</h3>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm
-          nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </section>
 
       <section class="bottommid">
         <h3>Product</h3>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm
-          nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </section>
       <section class="bottomright">
         <h3>Vision</h3>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm
-          nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </section>
     </section>
     <hr class="bottomhr">
